refactor(templates): 优化复选框渲染逻辑并调整年份输入范围
优化了 data.html 中复选框的渲染逻辑，使其仅在 `game.download_url` 存在时显示。同时调整了 index.html 中年份输入的范围，使其更灵活以适应更广泛的时间范围。

--- a/templates/data.html
+++ b/templates/data.html
@@ -107,10 +107,12 @@ function updateTable(data) {
             <td>${game.name}${game.nyaa_name ? `<div class="text-muted small" style="display:${game.download_url ? 'none' : ''}">${game.nyaa_name}</div>` : ''}</td>
             <td>${game.company}</td>
             <td>
-                <input type="checkbox" 
-                    class="game-checkbox" 
-                    ${game.download_url ? 'checked' : ''} 
-                    onchange="handleCheckboxChange(this)">
+                ${(game.download_url) ? 
+                    `<input type="checkbox" 
+                        class="game-checkbox" 
+                        ${game.download_url ? 'checked' : ''} 
+                        onchange="handleCheckboxChange(this)">`
+                    : ''}
             </td>
             <td>
                 ${game.download_url ? 
